--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
 			<div class="utilItem">
 				<img src="./android2.png" alt="Android icon" />
 				<h3>Consectetur</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias laudantium nulla perferendis saepe?</p>
+				<p>Vestibulum id ligula porta euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
 			</div>
 			<div class="utilItem">
 				<img src="./compmac.png" alt="PC/Mac icon" />
-				<h3>Consectetur</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias laudantium nulla perferendis saepe?</p>
+				<h3>Tristiquet</h3>
+				<p>Fusce dapibus, cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo risus.</p>
 			</div>
 			<div class="utilItem">
 				<img src="./camera2.png" alt="Camera icon" />
-				<h3>Consectetur</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias laudantium nulla perferendis saepe?</p>
+				<h3>Fermentum</h3>
+				<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum sagittis lacus mollis.</p>
 			</div>
 			<div class="utilItem">
 				<img src="stopwatch.png" alt="Stopwatch icon" />
-				<h3>Consectetur</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed alias laudantium nulla perferendis saepe?</p>
+				<h3>Elit Ultricies</h3>
+				<p>Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet.</p>
 			</div>
 		</div>
 	</div>
@@ -58,12 +58,12 @@
 		<div class="section3">
 			<h3>Our Featured Works
 			</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			<p>Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.</p>
 			<ul>
-				<li>All</li>
-				<li>Graphic</li>
-				<li>Illustration</li>
-				<li>Motion</li>
+				<li><button class="button">All</button></li>
+				<li><button class="button">Graphic</button></li>
+				<li><button class="button">Illustration</button></li>
+				<li><button class="button">Motion</button></li>
 			</ul>
 			<div class="featuredBox">
 				<div><img src="./featured/example12.jpg" alt="example" /></div>
@@ -86,7 +86,7 @@
 			<h3>
 				Get in Touch
 			</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+			<p>Vestibulum id ligula porta felis euismod semper, malesuada euismod.</p>
 			<ul>
 				<li><img src="./attachments/Fill.png" alt="location icon" /> Moonshine Street No. 14/05 Light City, Jupiter</li>
 				<li><img src="./attachments/Phone.png" alt="phone icon" />&nbsp;0247&nbsp;541&nbsp;6587</li>
