ok forreal i think I'm done

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Webpaint</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -8,10 +9,10 @@
 <body>
 	<nav>
 		<div class="navWrapper">
-			<div class="wpLogo">
+			<a class="wpLogo" href="#">
 				<img src="./wplogo.png" alt="Webpaint logo" />
 				<div>ebpaint</div>
-			</div>
+			</a>
 			<div class="navBox">
 				<a class="navLink" href="#">Home</a>
 				<a class="navLink" href="#">Portfolio</a>
@@ -66,18 +67,18 @@
 				<li><button class="button">Motion</button></li>
 			</ul>
 			<div class="featuredBox">
-				<div><img src="./featured/example12.jpg" alt="example" /></div>
-				<div><img src="./featured/example11.jpg" alt="example" /></div>
-				<div><img src="./featured/example10.jpg" alt="example" /></div>
-				<div><img src="./featured/example09.jpg" alt="example" /></div>
-				<div><img src="./featured/example08.jpg" alt="example" /></div>
-				<div><img src="./featured/example07.jpg" alt="example" /></div>
-				<div><img src="./featured/example06.jpg" alt="example" /></div>
-				<div><img src="./featured/example05.jpg" alt="example" /></div>
-				<div><img src="./featured/example04.jpg" alt="example" /></div>
-				<div><img src="./featured/example03.jpg" alt="example" /></div>
-				<div><img src="./featured/example02.jpg" alt="example" /></div>
-				<div><img src="./featured/example01.jpg" alt="example" /></div>
+				<div><a href="#"><img src="./featured/example12.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example11.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example10.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example09.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example08.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example07.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example06.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example05.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example04.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example03.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example02.jpg" alt="example" /></a></div>
+				<div><a href="#"><img src="./featured/example01.jpg" alt="example" /></a></div>
 			</div>
 		</div>
 	</div>
@@ -88,14 +89,14 @@
 			</h3>
 			<p>Vestibulum id ligula porta felis euismod semper, malesuada euismod.</p>
 			<ul>
-				<li><img src="./attachments/Fill.png" alt="location icon" /> Moonshine Street No. 14/05 Light City, Jupiter</li>
-				<li><img src="./attachments/Phone.png" alt="phone icon" />&nbsp;0247&nbsp;541&nbsp;6587</li>
+				<li><a href="#"><img src="./attachments/Fill.png" alt="location icon" /> Moonshine Street No. 14/05 Light City, Jupiter</a></li>
+				<li><a href="tel://0247-541-6587"><img src="./attachments/Phone.png" alt="phone icon" />&nbsp;0247&nbsp;541&nbsp;6587</a></li>
 			</ul>
-			<div class="icon"><img src="./attachments/RSS.png" alt="twitter icon" /></div>
-			<div class="icon"><img src="./attachments/Facebook.png" alt="twitter icon" /></div>
-			<div class="icon"><img src="./attachments/Twitter.png" alt="twitter icon" /></div>
-			<div class="icon"><img src="./attachments/Dribble.png" alt="twitter icon" /></div>
-			<div class="icon"><img src="./attachments/Pinterest.png" alt="twitter icon" /></div>
+			<div class="icon"><a href="#"><img src="./attachments/RSS.png" alt="twitter icon" /></a></div>
+			<div class="icon"><a href="#"><img src="./attachments/Facebook.png" alt="twitter icon" /></a></div>
+			<div class="icon"><a href="#"><img src="./attachments/Twitter.png" alt="twitter icon" /></a></div>
+			<div class="icon"><a href="#"><img src="./attachments/Dribble.png" alt="twitter icon" /></a></div>
+			<div class="icon"><a href="#"><img src="./attachments/Pinterest.png" alt="twitter icon" /></a></div>
 		</div>
 	</footer>
 	<div class="bottomThing">
