cleaned up some code. more object oriented css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Webpaint</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
-	<nav>
-		<div class="navWrapper">
+	<nav class="fixed-nav">
+		<div class="nav-container container vert-align">
 			<a class="wpLogo" href="#">
 				<img src="./wplogo.png" alt="Webpaint logo" />
 				<div>ebpaint</div>
@@ -22,8 +22,9 @@
 			</div>
 		</div>
 	</nav>
+	<div class="nav2"></div>
 	<div class="section1">
-		<div class="sec1container">
+		<div class="sec1container container vert-align">
 			<h2 class="sec1h2">We are Webpaint</h2>
 			<p><i>digital & branding</i> agency based on Jupiter and we would love
 				<br>to turn ideas into beautiful things.
@@ -32,7 +33,7 @@
 		</div>
 	</div>
 	<div class="section2">
-		<div class="utilities">
+		<div class="utilities container vert-align">
 			<div class="utilItem">
 				<img src="./android2.png" alt="Android icon" />
 				<h3>Consectetur</h3>
@@ -55,8 +56,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="sec3container">
-		<div class="section3">
+	<div class="section3">
+		<div class="container vert-align">
 			<h3>Our Featured Works
 			</h3>
 			<p>Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum.</p>
@@ -67,23 +68,23 @@
 				<li><button class="button">Motion</button></li>
 			</ul>
 			<div class="featuredBox">
-				<div><a href="#"><img src="./featured/example12.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example11.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example10.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example09.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example08.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example07.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example06.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example05.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example04.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example03.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example02.jpg" alt="example" /></a></div>
-				<div><a href="#"><img src="./featured/example01.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example12.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example11.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example10.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example09.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example08.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example07.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example06.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example05.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example04.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example03.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example02.jpg" alt="example" /></a></div>
+				<div class="featuredItem"><a href="#"><img src="./featured/example01.jpg" alt="example" /></a></div>
 			</div>
 		</div>
 	</div>
 	<footer>
-		<div class="footercontainer">
+		<div class="footercontainer container vert-align">
 			<h3>
 				Get in Touch
 			</h3>
@@ -100,7 +101,7 @@
 		</div>
 	</footer>
 	<div class="bottomThing">
-		<div class="copy">&copy;2013 Webpaint. All Rights Reserved.</div>
+		<div class="copy vert-align">&copy;2013 Webpaint. All Rights Reserved.</div>
 	</div>
 </body>
 </html>
